<resources>
    <string name="app_name">Android</string>
    <string name="show_toast">Show Toast</string>
    <string name="notification">Notification</string>
    <string name="name">Name</string>
    <string name="regd_no">Regd No.</string>
    <string name="branch">Branch</string>
    <string name="apply">Apply</string>
    <string name="second_activity">Second Activity</string>
    <string name="_2ndline">2ndline</string>
    <string name="request_permission">Request Permission</string>
    <string name="add_image">Add Image</string>
    <string name="custom_toast">Custom Toast</string>
    <string name="toast">Toast</string>
    <string name="add_contact">Add Contact</string>
    <string name="settings">Settings</string>
    <string name="favourite">Favourite</string>
    <string name="close_app">Close App</string>
    <string name="give_feedback">Give Feedback</string>
    <string name="alert_box_1">Alert Box 1</string>
    <string name="alert_box_2">Alert Box 2</string>
    <string name="alert_box_3">Alert Box 3</string>
    <string name="third_activity">Third Activity</string>
    <string name="new_todo">New Todo</string>
    <string name="add">Add</string>
    <string name="fourth_activity">Fourth Activity</string>
    <string name="title">Title</string>
    <string name="next_activity">Next Activity</string>
    <string name="back">Back</string>

    <string-array name="Branch">
        <item>Computer Science and Engineering</item>
        <item>Information Technology</item>
        <item>Electronic and Telecommunication</item>
        <item>Electronic and Electrical Engineering</item>
        <item>Civil Engineering</item>
        <item>Chemical Engineering</item>
        <item>Mechanical Engineering</item>
        <item>Production Engineering</item>
        <item>Electrical Engineering</item>
        <item>Metallurgical Engineering</item>
    </string-array>
    <string name="title_activity_fifith">FifithActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="load">Load</string>
    <string name="save">Save</string>
    <string name="show_notification">Show Notification</string>
</resources>